# tldr-crypto-finance

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: sender_profiles.yml  sponsor_rules.yml  taxonomy.yml  watchlists.yml
notebooks/: 01_exploration.ipynb
src/tldr_crypto_finance/: __init__.py  cli.py  config.py  logging_utils.py
src/tldr_crypto_finance/analytics/: __init__.py  dashboards.sql  export_parquet.py  metrics.py
src/tldr_crypto_finance/db/: __init__.py  duckdb.py  schema.sql  views.sql
src/tldr_crypto_finance/ingestion/: __init__.py  checkpoints.py  common.py  eml_ingest.py  gmail_ingest.py  imap_ingest.py  mbox_ingest.py
src/tldr_crypto_finance/labeling/: __init__.py  embeddings.py  entities.py  review_queue.py  rules.py  taxonomy.py  zero_shot.py
src/tldr_crypto_finance/models/: __init__.py  records.py
src/tldr_crypto_finance/parsing/: __init__.py  article_splitter.py  html_clean.py  link_extractor.py  normalize.py  section_splitter.py  sender_profile_parser.py  sponsor_filter.py
src/tldr_crypto_finance/pipelines/: backfill.py  enrich.py  full_refresh.py  sync.py
src/tldr_crypto_finance/retrieval/: briefs.py  query.py  rank.py  semantic.py
src/tldr_crypto_finance/utils/: hashing.py  text.py  time.py  (+1 more)
tests/: test_article_splitter.py  test_deduping.py  test_entities.py  test_link_extractor.py  test_retrieval.py  test_section_splitter.py  test_sponsor_filter.py  test_sync_helpers.py
tests/fixtures/: malformed_newsletter.eml  sample_newsletter_1.eml  sample_newsletter_2.eml  sample_newsletter_html.html
